=======================================================================
VERSION 0.2.8
=======================================================================

03-03-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/streamtrack.cpp:
    * src/dwi/tractography/tracker/base.h:
    * src/dwi/tractography/tracker/base.cpp:
      new option to stop tracking as soon as track enters any include region.

    * cmd/streamtrack.cpp:
    * src/dwi/tractography/tracker/base.h:
    * src/dwi/tractography/tracker/base.cpp:
      new option to prevent tri-linear interpolation of mask regions.

    * src/dwi/tractography/tracker/base.h:
    * src/dwi/tractography/tracker/base.cpp:
    * src/dwi/tractography/tracker/dt_stream.cpp:
    * src/dwi/tractography/tracker/sd_stream.cpp:
    * src/dwi/tractography/tracker/sd_prob.cpp:
      tracking now stops immediately before the track leaves the mask, rather
      than immediately before it.

    * lib/file/dicom/image.h:
    * lib/file/dicom/image.cpp:
    * lib/file/dicom/mapper.cpp:
      improve GE gradient information support

    * lib/file/dicom/element.cpp: fix bug in handling of IS sequences

09-12-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/dicom/mapper.cpp: handle zero directions in gradient scheme
    * lib/file/dicom/image.cpp: preliminary GE gradient information support

02-12-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/key_value.cpp: minor bug that prevented reading read-only files

27-11-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * src/mrview/pane.cpp:
    * src/dwi/render_frame.cpp:
      minor change to receive mouse move events on newer linux distributions (e.g. Ubuntu Karmic)

04-11-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/average.cpp: fix -axis option

29-10-2008 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/mrabs.cpp: new command to take absolute value of image intensities

14-10-2009 J-Donald Tournier <d.tournier@brain.org.au>