@@ -3,6 +3,9 @@ VERSION 0.2.8
 =======================================================================
 
 03-03-2010 J-Donald Tournier <d.tournier@brain.org.au>
+    * cmd/normalise_tracks.cpp: 
+      skip points in the tracks file is they are outside the supplied warp
+
     * cmd/streamtrack.cpp:
     * src/dwi/tractography/tracker/base.h:
     * src/dwi/tractography/tracker/base.cpp:
@@ -19,7 +22,7 @@ VERSION 0.2.8
     * src/dwi/tractography/tracker/sd_stream.cpp:
     * src/dwi/tractography/tracker/sd_prob.cpp:
       tracking now stops immediately before the track leaves the mask, rather
-      than immediately before it.
+      than immediately after.
 
     * lib/file/dicom/image.h:
     * lib/file/dicom/image.cpp:
